istio/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-counter-v1
  annotations:
    argocd.argoproj.io/sync-waves: "1"
spec:
  selector:
    matchLabels:
      app: webapp
      version: v1
  template:
    metadata:
      labels:
        app: webapp
        version: v1
    spec:
      containers:
      - name: visits-counter
        image: charanreddy12/visits-counter:v1
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-counter-v2
  annotations:
    argocd.argoproj.io/sync-waves: "1"
spec:
  selector:
    matchLabels:
      app: webapp
      version: v2
  template:
    metadata:
      labels:
        app: webapp
        version: v2
    spec:
      containers:
      - name: visits-counter
        image: charanreddy12/visits-counter:v1
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: visits-counter-service
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 3000
    # nodePort: 31100
