istio/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: visits-counter-vs
spec:
  hosts:
    - "127.0.0.1.sslip.io"
  gateways:
    - visits-counter-gateway
  http:
    - route:
        - destination:
            host: visits-counter-service
            subset: v1
            port:
              number: 80
          weight: 50
        - destination:
            host: visits-counter-service
            subset: v2
            port:
              number: 80
          weight: 50
